--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -34,6 +34,7 @@
           <nav>
             <a href="{{ site.baseurl }}/">Blog</a>
             <a href="{{ site.baseurl }}/about">About</a>
+            <a herf="{{ site.baseurl }/iniciativas}">Iniciativas</a>
           </nav>
         </header>
       </div>
