--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -32,7 +32,7 @@
           </div>
           
           <nav>
-            <a href="{{ site.baseurl }}/">Blog</a>
+            <a href="{{ site.baseurl }}/">Blogs</a>
             <a href="{{ site.baseurl }}/about">About</a>
             <a herf="{{ site.baseurl }/iniciativas}">Iniciativas</a>
           </nav>
