--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -34,7 +34,8 @@
           <nav>
             <a href="{{ site.baseurl }}/">Blogs</a>
             <a href="{{ site.baseurl }}/about">About</a>
-            <a herf="{{ site.baseurl }}/iniciativas">Iniciativas</a>
+            <!--<a herf="{{ site.baseurl }}/iniciativas">Iniciativas</a>-->
+            <a herf="http://mleonardomp.github.io/iniciativas/">Iniciativas</a>
           </nav>
         </header>
       </div>
