--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -32,10 +32,11 @@
           </div>
           
           <nav>
-            <a href="{{ site.baseurl }}/">Blogs</a>
+            <a herf="http://mleonardomp.github.io/iniciativas">Iniciativas</a>
+            <a href="{{ site.baseurl }}/">Blog</a>
             <a href="{{ site.baseurl }}/about">About</a>
             <!--<a herf="{{ site.baseurl }}/iniciativas">Iniciativas</a>-->
-            <a herf="http://mleonardomp.github.io/iniciativas/">Iniciativas</a>
+            
           </nav>
         </header>
       </div>
