--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -32,10 +32,9 @@
           </div>
           
           <nav>
-            <a herf="http://mleonardomp.github.io/iniciativas">Iniciativas</a>
             <a href="{{ site.baseurl }}/">Blog</a>
             <a href="{{ site.baseurl }}/about">About</a>
-            <!--<a herf="{{ site.baseurl }}/iniciativas">Iniciativas</a>-->
+            <a herf="{{ site.baseurl }}/about">Iniciativas</a>
             
           </nav>
         </header>
