--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -33,7 +33,7 @@
           
           <nav>
             <a href="{{ site.baseurl }}/">Blog</a>
-            <a href="{{ site.baseurl }}/about">About</a>
+            <a href="{{ site.baseurl }}/iniciativas">About</a>
             <a herf="{{ site.baseurl }}/about">Iniciativas</a>
             
           </nav>
@@ -54,5 +54,6 @@
     </div>
 
     {% include analytics.html %}
+    {% include disqu.html %}
   </body>
 </html>
