--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -32,10 +32,9 @@
           </div>
           
           <nav>
+            <a href="{{ site.baseurl }}/iniciativas">Iniciativas</a>
             <a href="{{ site.baseurl }}/">Blog</a>
-            <a href="{{ site.baseurl }}/iniciativas">About</a>
-          
-            
+            <a href="{{ site.baseurl }}/abaut">About</a>
           </nav>
         </header>
       </div>
