--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -32,9 +32,9 @@
           </div>
           
           <nav>
-            <a href="{{ site.baseurl }}/iniciativas">Iniciativas</a>
             <a href="{{ site.baseurl }}/">Blog</a>
-            <a href="{{ site.baseurl }}/abaut">About</a>
+            <a href="{{ site.baseurl }}/iniciativas">Iniciativas</a>
+            <a href="{{ site.baseurl }}/about">About</a>
           </nav>
         </header>
       </div>
