--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -52,7 +52,9 @@
         </footer>
       </div>
     </div>
-
+    
+    
+    {% include discus.html %}
     {% include analytics.html %}
    
     
