--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -20,7 +20,7 @@ comments: true
 <div id="disqus_thread"></div>
     <script type="text/javascript">
         /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
-        var disqus_shortname = 'Post-MSL'; // required: replace example with your forum shortname
+        var disqus_shortname = 'migracinasoftwarelibre'; // required: replace example with your forum shortname
 
         /* * * DON'T EDIT BELOW THIS LINE * * */
         (function() {
